Start modifying starmap

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Starmap</title>
+	<title>Reaver's Starmap</title>
 	%OGP%
 	<style>
 		@font-face {
@@ -80,7 +80,7 @@
 				made by Strikeeaglechase with
 				<a href="https://discord.gg/VnU8apR" style="color: white" >Collective</a>.
 
-			<p class="loading-text">Other Contributors:<br>Volcano, MuNK, Timothy, IHave</p> 
+			<p class="loading-text">Other Contributors:<br>Volcano, MuNK, Timothy, IHave</p>
 			</p>-->
 			<div class="loading-container-sub">
 				<p id="loading-text" class="loading-text"> Loading UI-Interface... </p>
@@ -510,7 +510,7 @@
 		</div>
 		<div class="popup" id="popup">
 			<div class="popup-content">
-				<h2>Welcome to Starmap!</h2>
+				<h2>Welcome to Reaver's Starmap!</h2>
 				<p>
 					Starmap is a free ISAN-based 3D map for the game <a href="https://www.starbasegame.com/">Starbase</a>!
 					You can use these
@@ -519,14 +519,10 @@
 						ISAN
 					</a> on your ship.
 					<br><br>
-					To give feedback or report bugs please create a support ticket <a
-						href="https://discord.gg/VnU8apR">here</a>
-					<br>
-					Private layers are a premium feature. If you want to acquire one for your faction, please open a
-					diplomatic ticket in
-					the #contact_us channel of the <a href="https://discord.gg/VnU8apR">Collective Discord</a>
+					This website was originaly made by the collective: <a href="https://discord.gg/VnU8apR">Collective Discord</a> all credit for it an ISAN goes to them.<br>
+					This version is hoster by Reaver's to guarantee privacy of our coordinates.
 					<br><br>
-					This website uses cookies for functional and analytical purposes. This website runs on Nginx. Press
+					This website uses cookies for functional and analytical purposes. This website runs on AWS. Press
 					"Accept" to continue.
 				</p>
 				<button id="acceptCookies">Accept</button>
